Refactor to use internal structural types
The internal types are needed to easily look ahead, which is needed to
unwrap arrays (arrays in XML have two flavours: repeated elements, and
repeated elements wrapped in another element).